--- a/plugin.xml
+++ b/plugin.xml
@@ -7,6 +7,6 @@
     <phpversion>5.6.0</phpversion>
     <url>http://www.glfusion.org</url>
     <maintainer>Lee Garner</maintainer>
-    <requires>paypal</requires>
-    <requires>lglib</requires>
+    <requires>paypal,0.6.0</requires>
+    <requires>lglib,1.0.8</requires>
 </plugin>
