--- a/plugin.xml
+++ b/plugin.xml
@@ -1,12 +1,12 @@
 <plugin>
     <id>subscription</id>
     <name>Subscription</name>
-    <description>Integrates with the PayPal plugin to provide subscriptions to site content for members.</description>
+    <description>Integrates with the Shop plugin to provide subscriptions to site content for members.</description>
     <version>0.2.3</version>
     <glfusionversion>1.7.0</glfusionversion>
     <phpversion>7.1.0</phpversion>
     <url>http://www.glfusion.org</url>
     <maintainer>Lee Garner</maintainer>
-    <requires>paypal,0.6.0</requires>
+    <requires>shop,0.7.0</requires>
     <requires>lglib,1.0.7</requires>
 </plugin>
